--- a/package.json
+++ b/package.json
@@ -48,6 +48,9 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "stylelint": "^14.0.1",
+    "stylelint-config-recommended-scss": "^5.0.0",
+    "stylelint-scss": "^4.0.0",
     "typescript": "~4.3.5"
   }
 }
